--- a/css/default.css
+++ b/css/default.css
@@ -1,3 +1,27 @@
 @charset "utf-8";
 
 body{
+  background-color: mediumawuamarine;
+}
+
+.center{
+  margin: 0 auto 0 auto 0;
+  width: 50%;
+}
+
+ul{
+  list-style: none;
+  marigin: 0;
+  padding: 0;
+}
+
+li{
+  float: left;
+  marigin-right: 1%;
+}
+
+.image:after{
+  content: "";
+  display: block;
+  clear: both;
+}
